<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".HealthDetails">

    <TextView
        android:id="@+id/tvDTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:text="@string/hintTitle"/>
    <ImageView
        android:id="@+id/imgAidIcon"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="250dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/eNumb"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:id="@+id/tvDPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_local_phone_black_24dp"
        android:drawablePadding="20dp"
        android:paddingTop="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:text="0807777777777"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:paddingTop="10dp"
        android:textSize="24sp"
        android:text="@string/tipSympts"/>
    <TextView
        android:id="@+id/tvDSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:text="Symptoms"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:paddingTop="10dp"
        android:textSize="24sp"
        android:text="@string/tipCure"/>
    <TextView
        android:id="@+id/tvDCure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:text="Cure"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:paddingTop="10dp"
        android:textSize="24sp"
        android:text="@string/tipPrev"/>
    <TextView
        android:id="@+id/tvDPrevention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:text="Prevention"/>
</LinearLayout>